Creating an index using a non-existing plugin should be an error not a warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.0-rc2
    • Affects Version/s: None
    • Component/s: Index Maintenance
    • None
    • Minor Change
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently just does:

      log() << "warning: can't find plugin [" << pluginName << "]" << endl;
      

      This means that typos like this will succeed and silently (excluding the log) do nothing:

      db.places.ensureIndex({location:"2D"})
      

      This will be a breaking change for users who mistakenly use string "1" instead of number 1 in their index specs.

            Assignee:
            Mathias Stearn
            Reporter:
            Mathias Stearn
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: