SERVER-5826 prevent building an index with a non-existent plugin